Added first, crude, working draft version

--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
   <title>ashtray</title>
 
   <link href="css/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
-  <link href="css/print.css" media="print" rel="stylesheet" type="text/css" />
   <!--[if lt IE 8]>
   <link href="css/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
   <![endif]-->
 </head>
 <body>
   <div id="container">
+    <h1>Ashtray</h1>
+    <form action="#/create" method="post"><button>Smoke</button</form>
+
+    <div id="stats"></div>
   </div>
   <script src="js/default.js" type="text/javascript" charset="utf-8"></script>
+  <script src="js/smoke.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
