Renamed application to "smokes"

--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>ashtray</title>
-
+  <title>Smokes</title>
   <link href="css/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
   <!--[if lt IE 8]>
   <link href="css/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
@@ -10,7 +9,7 @@
 </head>
 <body>
   <div id="container">
-    <h1>Ashtray</h1>
+    <h1>Smokes</h1>
     <form action="#/create" method="post"><button>Smoke</button</form>
 
     <div id="stats"></div>
