--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Smokes</title>
+  <link rel="shortcut icon" href="images/favicon.ico"
   <link href="css/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
   <!--[if lt IE 8]>
   <link href="css/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
