--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
   <title>Smokes</title>
-  <link rel="shortcut icon" href="images/favicon.ico"
+  <link rel="shortcut icon" href="images/favicon.ico">
+  <link rel="apple-touch-icon" href="images/smokes-apple-touch-icon.png">
   <link href="css/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
   <!--[if lt IE 8]>
   <link href="css/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
@@ -10,7 +11,6 @@
 </head>
 <body>
   <div id="container">
-    <h1>Smokes</h1>
     <form action="#/create" method="post"><button>Smoke</button</form>
 
     <div id="stats"></div>
