--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <title>Smokes</title>
   <link rel="shortcut icon" href="images/favicon.ico">
   <link rel="apple-touch-icon" href="images/smokes-apple-touch-icon.png">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+
   <link href="css/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
   <!--[if lt IE 8]>
   <link href="css/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
