Crude redesign, nearing the desired look

--- a/index.html
+++ b/index.html
@@ -14,9 +14,28 @@
 </head>
 <body>
   <div id="container">
-    <form action="#/create" method="post"><button>Smoke</button</form>
 
-    <div id="stats"></div>
+    <header>
+      <h1>smokes</h1>
+
+      <section id="today">
+        <p class="label">TODAY</p>
+        <p class="value"></p>
+      </section>
+
+      <section id="average">
+        <p class="label">AVERAGE</p>
+        <p class="value"></p>
+      </section>
+    </header>
+
+    <section id="button">
+      <form action="#/create" method="post"><input type="image" src="images/button.png"></input</form>
+    </section>
+
+    <section id="stats">
+    </section>
+
   </div>
   <script src="js/default.js" type="text/javascript" charset="utf-8"></script>
   <script src="js/smoke.js" type="text/javascript" charset="utf-8"></script>
