--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
+  <link href="css/reset.css" media="screen, projection" rel="stylesheet" type="text/css" />
   <link href="css/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
-  <!--[if lt IE 8]>
-  <link href="css/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
-  <![endif]-->
 </head>
 <body>
   <div id="container">
