Tweaking iOS <meta> settings

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="apple-touch-icon" href="images/smokes-apple-touch-icon.png">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="viewport" content="width=700">
 
   <link href="css/reset.css" media="screen, projection" rel="stylesheet" type="text/css" />
   <link href="css/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
