Added splash for iOS

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Smokes</title>
   <link rel="shortcut icon" href="images/favicon.ico">
   <link rel="apple-touch-icon" href="images/smokes-apple-touch-icon.png">
+  <link rel="apple-touch-startup-image" href="images/splash.png" />
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="viewport" content="width=700">
