Added default values for today/average counts, added colorization for today's count, cleaning up JS (tmbundle warnings)

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 
       <section id="today">
         <p class="label">TODAY</p>
-        <p class="value"></p>
+        <p class="value zero">0</p>
       </section>
 
       <section id="average">
         <p class="label">AVERAGE</p>
-        <p class="value"></p>
+        <p class="value">0</p>
       </section>
     </header>
 
