Animating today's count CSS class

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
       <section id="average">
         <p class="label">AVERAGE</p>
-        <p class="value">0</p>
+        <p class="value"></p>
       </section>
     </header>
 
