Fade in/out red button on click

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     </header>
 
     <section id="button">
+      <img src="images/button-red.png" alt="">
       <form action="#/create" method="post"><input type="image" src="images/button.png"></input</form>
     </section>
 
