Added simple line chart visualization

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 
   </div>
   <script src="js/default.js" type="text/javascript" charset="utf-8"></script>
+  <script src="js/chart.js" type="text/javascript" charset="utf-8"></script>
   <script src="js/smoke.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
