Putting the chart into figure#chart

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
     </section>
 
   </div>
+
+  <figure id="chart"></figure>
+
   <script src="js/default.js" type="text/javascript" charset="utf-8"></script>
   <script src="js/chart.js" type="text/javascript" charset="utf-8"></script>
   <script src="js/smoke.js" type="text/javascript" charset="utf-8"></script>
