Added lame #container centering

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <p class="label">AVERAGE</p>
         <p class="value"></p>
       </section>
+      <div style="clear:both"></div>
     </header>
 
     <section id="button">
